# IO_lab2

./: .gitignore  CMakeLists.txt  CMakePresets.json
inc/: ansi_terminal.h  image_operations.h  img_struct.h  libs.h  tui.h  zadanka.h
src/: image_operations.c  main.c  tui.c  zad1.c  zad2.c  zad3.c  zad4.c
src/image_operations/: jpeg_process.c  load_image.c  processing_image.c  save_image.c  stbi_wraper.c
toolchains/: linux-aarch64-clang.cmake  windows-x86_64-gcc.cmake
